2013-07-18  Per Bothner  <per@bothner.com>

	* Declaration.java (load): When invoking a getter method,
	use loadOwningObject instead of just calling loadHeapFrame.
	This fixes Savannah bug #38026 "Mixed variables scope".
	Also, re-order the code to be a bit cleaner.

	* SetExp.java (compile): Re-factor code some simple-field
	and setter-method cases share logic when appropriate.

	* Declaration.java (load): Handle combination of IgnoreTarget and
	ALLOCATE_ON_STACK_LAST.  This fixes Savannah bug #39150
	"AppendValue procedure compiler InternalError".

2013-07-11  Per Bothner  <per@bothner.com>

	* Declaration.java (allocateVariable): New overload, with
	parameter to control if we want an autuPop Scope.
	(load): Use new allocateVariable variant if Variable needed.
	* SetExp.java (compile): Likewise.
	* BindingInitializer.java (emit): Likewise.

	* ApplyExp.java (compile): Extend previous optimization
	to self-tail-recursion, when possible.

2013-07-11  Per Bothner  <per@bothner.com>

	Fix complaint from Android's dx tool that variable use in bytecode
	is inconsistent with "LocalVariableTable" attribute.
	* LambdaExp.java (startForInlining): New field.
	* ApplyExp.java (compile): When doing a "sibling call" to an
	inlined function, don't do the store into parameter registers,
	since they may have different types than in current context.
	Instead do tail call to just before store where actually inlined.
	As a bonus, the bytecode is shorter.

2013-06-30  Per Bothner  <per@bothner.com>

	* LambdaExp.java (compileEnd): Call compileMembers on child
	ClassExp.  This fixes Savannah bug #39060
	"ClassFormatException (Absent Code attribute)".
	* ObjectExp.java (compile): Don't call compileMembers.
	* ClassExp.java (compile, compileSetField): Likewise.

2013-06-29  Per Bothner  <per@bothner.com>

	* LambdaExp.java (getCanCall): Remove - never actually used.
	(setCanCall): Remove - pointless if getCanCall never used.
	(CAN_CALL): Remove.
	(setCanAccess): Remove - replace by ...